@@ -340,6 +340,13 @@ final class Database
 			if(count>0)
 				throw new RuntimeException("there are "+count+" items left for table "+table.id);
 		}
+		
+		// NOTICE
+		// The following flushSequences() makes CopeTest work again, so that sequences do start
+		// from their initial value for each test. This is rather a hack, so we should deprecate
+		// CopeTest in favor of CopeModelTest in the future.
+		flushSequences();
+		
 		//final long amount = (System.currentTimeMillis()-time);
 		//checkEmptyTableTime += amount;
 		//System.out.println("CHECK EMPTY TABLES "+amount+"ms  accumulated "+checkEmptyTableTime);
