@@ -7,6 +7,7 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* flush sequences in checkEmptySchema, fixes CopeTest
 * remove Model.flushSequences()
 	deprecated version is provided
 * added conditions CompositeField.is[Not]Null()
